# clientmonitor

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: client.py  server.py
src/clientmonitor/: Client.py  Message.py  Server.py
