[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clientmonitor"
version = "0.0.4"
authors = [
  { name="Chris L.", email="stylesuxx@gmail.com" },
]
description = "Collect client data and display on monitor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stylesuxx/clientmonitor"
Issues = "https://github.com/stylesuxx/pyntercom/clientmonitor"
